[package]
name = "adb-wireless"
version = "0.1.0"
edition = "2024"
authors = ["teamclouday <teamclouday@gmail.com>"]
license = "Apache-2.0"
description = "CLI tool to generate QR code for adb wireless connection"
homepage = "https://github.com/teamclouday/adb-wireless"
repository = "https://github.com/teamclouday/adb-wireless"
keywords = ["adb", "wireless", "qr-code"]
categories = ["command-line-utilities", "networking"]

[dependencies]
thiserror = "2.0.12"
rand = "0.9.2"
clap = { version = "4.5.41", features = ["derive"] }

# multicast DNS
mdns-sd = "0.13.11"
# QR code generator
qr2term = "0.3.3"
